force-app/main/default/objects/Offering__c/Offering__c.object-meta.xml
<CustomObject>
    <description>A record representing products or services provided by small businesses in the EERE program, allowing detailed tracking and management of their market segment, program eligibility, and associated funding.</description>
    <label>Offering</label>
    <nameField>
        <label>Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>