force-app/main/default/objects/Offering__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Indicates the specific category or type of product or service offered by small businesses in the EERE program, providing insight into the business&apos;s specialization.</description>
    <inlineHelpText>Select the category that best describes the product or service offered. This helps classify offerings within the EERE program, facilitating easier management and analysis of business activities.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Manufacturing</fullName>
            </value>
            <value>
                <fullName>Biomass Energy</fullName>
            </value>
            <value>
                <fullName>Carbon Capture and Storage (CCS)</fullName>
            </value>
            <value>
                <fullName>Combined Heat and Power (CHP)</fullName>
            </value>
            <value>
                <fullName>Electric Vehicles</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Energy Storage</fullName>
            </value>
            <value>
                <fullName>Geothermal Energy</fullName>
            </value>
            <value>
                <fullName>Hydrogen and Fuel Cells</fullName>
            </value>
            <value>
                <fullName>Hydropower</fullName>
            </value>
            <value>
                <fullName>Marine and Hydrokinetic Energy</fullName>
            </value>
            <value>
                <fullName>Microgrids</fullName>
            </value>
            <value>
                <fullName>Nuclear Energy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Renewable Fuels</fullName>
            </value>
            <value>
                <fullName>Smart Grid</fullName>
            </value>
            <value>
                <fullName>Solar Energy</fullName>
            </value>
            <value>
                <fullName>Waste-to-Energy</fullName>
            </value>
            <value>
                <fullName>Wind Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>