force-app/main/default/objects/Offering__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A detailed description of the product or service, including features and benefits.</description>
    <inlineHelpText>Provide a detailed description of the product or service, including features and benefits.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>