force-app/main/default/objects/Offering__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>Identifies the primary market or industry, based on the associated company&apos;s NAICS Code &amp; Title, to which the product or service is targeted.</description>
    <formula>Company__r.NAICS_Code__c</formula>
    <inlineHelpText>Identifies the primary market or industry, based on the associated company&apos;s NAICS Code &amp; Title, to which the product or service is targeted.</inlineHelpText>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>