force-app/main/default/objects/Offering__c/fields/Standard_Price_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_per_Unit__c</fullName>
    <description>Specifies the default price per standard unit for the product or service being offered, forming the basis for pricing calculations in grants, deals, or agreements.</description>
    <inlineHelpText>Enter the default price for a single unit of this product or service. This price will be used for calculations unless a negotiated price is specified in a grant or deal.</inlineHelpText>
    <label>Standard Price per Unit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>