force-app/main/default/objects/Offering__c/fields/Technology_Area__c.field-meta.xml
<CustomField>
    <fullName>Technology_Area__c</fullName>
    <description>Indicates the specific area of technology associated with the product or service offered. This classification helps align offerings with the relevant FOA&apos;s (Funding Opportunity Announcements) technology sectors, facilitating targeted funding and support within the EERE program.</description>
    <inlineHelpText>Select the technology area that best describes the core technology or sector related to this offering.</inlineHelpText>
    <label>Technology Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Materials and Manufacturing</fullName>
            </value>
            <value>
                <fullName>Bioenergy</fullName>
            </value>
            <value>
                <fullName>Buildings</fullName>
            </value>
            <value>
                <fullName>Geothermal</fullName>
            </value>
            <value>
                <fullName>Hydrogen and Fuel Cell</fullName>
            </value>
            <value>
                <fullName>Industrial Efficiency and Decarbonization</fullName>
            </value>
            <value>
                <fullName>Solar Energy</fullName>
            </value>
            <value>
                <fullName>Water Power</fullName>
            </value>
            <value>
                <fullName>Wind Energy</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>