force-app/main/default/objects/Offering__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Indicates the standard unit of measurement or sale for the product or service being offered, providing a basis for pricing and quantity calculations.</description>
    <inlineHelpText>Enter the standard unit in which this product or service is typically measured or sold (e.g., &apos;each,&apos; &apos;hour,&apos; &apos;kWh&apos;). This will help accurately represent quantities and pricing in grants, deals, or agreements.</inlineHelpText>
    <label>Unit</label>
    <length>12</length>
    <type>Text</type>
</CustomField>